MangoBajito/tests/Lenguajes_II/Operacion/errors/21-concatenacion.mng
# Test 21: Error de concatenacion de cadenas
se_prende(){
	culito n0 : higuerote = "hola " + 2;
	culito n1 : higuerote = "hola " + 3.2;
	culito n2 : higuerote = "hola " + 3.2e+204;
	culito n3 : higuerote = "hola " + 'c';
	culito n4 : higuerote = "hola " + Sisa;
};